plugins {
    id("java-library")
    id("io.papermc.paperweight.userdev") version "2.0.0-beta.19" apply(false)
    id("maven-publish")
}

allprojects {
    group = 'su.nightexpress.sunlight'
    version = '3.16.0'

    repositories {
        mavenCentral()
        maven { url = 'https://repo.papermc.io/repository/maven-public/' }
        maven { url = 'https://repo.nightexpressdev.com/releases' }
        maven { url = 'https://repo.dmulloy2.net/repository/public/' }
        maven { url = 'https://jitpack.io' }
        maven { url = 'https://repo.extendedclip.com/content/repositories/placeholderapi/' }
        maven { url = 'https://repo.codemc.io/repository/maven-releases/' }
        maven { url = 'https://nexus.scarsz.me/content/groups/public/' }
    }
}

subprojects {
    apply plugin: 'java-library'
    apply plugin: 'maven-publish'

    java {
        toolchain {
            languageVersion = JavaLanguageVersion.of(21)
        }
        withSourcesJar()
        //withJavadocJar()
    }

    // Set the project encoding.
    tasks.withType(JavaCompile).configureEach {
        options.encoding = 'UTF-8'
    }

    dependencies {
        compileOnly 'su.nightexpress.nightcore:main:2.13.3'
        compileOnly 'io.papermc.paper:paper-api:1.21.11-R0.1-SNAPSHOT'
        compileOnly 'com.comphenix.protocol:ProtocolLib:5.4.0-SNAPSHOT'
        compileOnly 'com.github.retrooper:packetevents-spigot:2.9.5-SNAPSHOT'
        compileOnly 'com.discordsrv:discordsrv:1.28.0'
        compileOnly 'me.clip:placeholderapi:2.11.6'
        compileOnly 'org.apache.commons:commons-text:1.10.0'
    }

    publishing {
        publications {
            create("mavenJava", MavenPublication) {
                artifact(tasks.jar)
                artifact(tasks.sourcesJar) {
                    classifier = "sources"
                }
                // artifact(tasks.javadocJar) { classifier = "javadoc" }
                artifactId = project.name
            }
        }
        repositories {
            maven {
                name = "nightexpress"
                url = uri("https://repo.nightexpressdev.com/releases")
                credentials {
                    username = System.getenv("REPOSILITE_USER")
                    password = System.getenv("REPOSILITE_PASSWORD")
                }
            }
        }
    }
}